--- a/registerPage.html
+++ b/registerPage.html
@@ -25,7 +25,11 @@
         <label for="InputPassword" class="form-label">Password</label>
         <input type="password" class="form-control" id="InputPassword">
       </div>
-      <button type="submit" class="btn btn-primary">Login</button>
+      <div class="mb-3">
+        <label for="ConfPassword" class="form-label">Confirm Password</label>
+        <input type="password" class="form-control" id="ConfPassword">
+      </div>
+      <button type="submit" class="btn btn-primary">Register</button>
     </form>
   </div>
 
