--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav class="nav">
     <h1>Piece Together</h1>
     <a class="nav-link" href="loginPage.html">Login</a>
-    <a class="nav-link" href="#">Register</a>
+    <a class="nav-link" href="registerPage.html">Register</a>
     
   </nav>
   <div class="card" >
