--- a/loginPage.html
+++ b/loginPage.html
@@ -20,7 +20,7 @@
 
   <div class="container">
     <h3>Login</h3>
-    <form>
+    <form onSubmit=loginUser(event)>
       <div class="mb-3">
         <label for="InputEmail" class="form-label">Email address</label>
         <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
@@ -30,10 +30,11 @@
         <label for="InputPassword" class="form-label">Password</label>
         <input type="password" class="form-control" id="InputPassword">
       </div>
-      <button type="submit" class="btn btn-primary">Login</button>
+      <button type="submit" class="btn btn-primary" >Login</button>
     </form>
   </div>
 
+  <script src="js/source.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
