--- a/registerPage.html
+++ b/registerPage.html
@@ -20,7 +20,7 @@
 
   <div class="container">
     <h3>Register</h3>
-    <form>
+    <form onSubmit=registerUser(event)>
       <div class="mb-3">
         <label for="InputFName" class="form-label">First Name</label>
         <input type="text" class="form-control" id="InputFName" aria-describedby="inputFirstName">
@@ -45,10 +45,11 @@
         <label for="ConfPassword" class="form-label">Confirm Password</label>
         <input type="password" class="form-control" id="ConfPassword">
       </div>
-      <button type="submit" class="btn btn-primary">Register</button>
+      <button type="submit" class="btn btn-primary" >Register</button>
     </form>
   </div>
-
+  
+  <script src="js/source.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
