--- a/userPage.html
+++ b/userPage.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/header.css"/>
+  <link rel="stylesheet" href="css/userPage.css"/>
   <title>PieceTogether</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
@@ -17,8 +18,111 @@
     </div>
   </nav>
 
-  <div id="greetingBox">
+  <h3 id="greetingBox">Hello </h3>
 
+  <div class="accordion" id="accordionExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingOne">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          2020
+        </button>
+      </h2>
+      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <table>
+            <tr>
+              <th>Event Type</th>
+              <th>Title</th>
+              <th>Start Date</th>
+              <th>End Date</th>
+              <th>Notes</th>
+            </tr>
+            <tr>
+              <td>Body Modification</td>
+              <td>Stabed by morgol blade</td>
+              <td>june 10</td>
+              <td>never</td>
+              <td>almost died lol</td>
+            </tr>
+            <tr>
+              <td>Pets</td>
+              <td>adopted Gollum</td>
+              <td>Oct 30</td>
+              <td>current</td>
+              <td>caught him with an elven rope</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingTwo">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          2019
+        </button>
+      </h2>
+      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <table>
+            <tr>
+              <th>Event Type</th>
+              <th>Title</th>
+              <th>Start Date</th>
+              <th>End Date</th>
+              <th>Notes</th>
+            </tr>
+            <tr>
+              <td>Body Modification</td>
+              <td>Stabed by morgol blade</td>
+              <td>june 10</td>
+              <td>never</td>
+              <td>almost died lol</td>
+            </tr>
+            <tr>
+              <td>Pets</td>
+              <td>adopted Gollum</td>
+              <td>Oct 30</td>
+              <td>current</td>
+              <td>caught him with an elven rope</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingThree">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          2018
+        </button>
+      </h2>
+      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <table>
+            <tr>
+              <th>Event Type</th>
+              <th>Title</th>
+              <th>Start Date</th>
+              <th>End Date</th>
+              <th>Notes</th>
+            </tr>
+            <tr>
+              <td>Body Modification</td>
+              <td>Stabed by morgol blade</td>
+              <td>june 10</td>
+              <td>never</td>
+              <td>almost died lol</td>
+            </tr>
+            <tr>
+              <td>Pets</td>
+              <td>adopted Gollum</td>
+              <td>Oct 30</td>
+              <td>current</td>
+              <td>caught him with an elven rope</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script src="js/source.js"></script>
