--- a/userPage.html
+++ b/userPage.html
@@ -13,118 +13,46 @@
   <nav class="nav" id="fullNav">
     <h1 id="navTitle">Piece Together</h1>
     <div id="headerButtons">
-      <a class="nav-link" href="#">Logout</a>
+      <a class="nav-link" href="index.html">Logout</a>
       <a class="nav-link" href="#">Settings</a>
     </div>
   </nav>
 
   <h3 id="greetingBox">Hello </h3>
+  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="offcanvas">
+    Sorting Options
+  </button>
 
-  <div class="accordion" id="accordionExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingOne">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          2020
-        </button>
-      </h2>
-      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <table>
-            <tr>
-              <th>Event Type</th>
-              <th>Title</th>
-              <th>Start Date</th>
-              <th>End Date</th>
-              <th>Notes</th>
-            </tr>
-            <tr>
-              <td>Body Modification</td>
-              <td>Stabed by morgol blade</td>
-              <td>june 10</td>
-              <td>never</td>
-              <td>almost died lol</td>
-            </tr>
-            <tr>
-              <td>Pets</td>
-              <td>adopted Gollum</td>
-              <td>Oct 30</td>
-              <td>current</td>
-              <td>caught him with an elven rope</td>
-            </tr>
-          </table>
-        </div>
-      </div>
+  <div class="accordion" id="accordion">
+  
+  </div>
+  
+  
+  <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasLabel">Sort Events</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingTwo">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          2019
-        </button>
-      </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <table>
-            <tr>
-              <th>Event Type</th>
-              <th>Title</th>
-              <th>Start Date</th>
-              <th>End Date</th>
-              <th>Notes</th>
-            </tr>
-            <tr>
-              <td>Body Modification</td>
-              <td>Stabed by morgol blade</td>
-              <td>june 10</td>
-              <td>never</td>
-              <td>almost died lol</td>
-            </tr>
-            <tr>
-              <td>Pets</td>
-              <td>adopted Gollum</td>
-              <td>Oct 30</td>
-              <td>current</td>
-              <td>caught him with an elven rope</td>
-            </tr>
-          </table>
-        </div>
+    <div class="offcanvas-body">
+      <div>
+        Sort your events by category
       </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingThree">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          2018
+      <div class="dropdown mt-3">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+          Category
         </button>
-      </h2>
-      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <table>
-            <tr>
-              <th>Event Type</th>
-              <th>Title</th>
-              <th>Start Date</th>
-              <th>End Date</th>
-              <th>Notes</th>
-            </tr>
-            <tr>
-              <td>Body Modification</td>
-              <td>Stabed by morgol blade</td>
-              <td>june 10</td>
-              <td>never</td>
-              <td>almost died lol</td>
-            </tr>
-            <tr>
-              <td>Pets</td>
-              <td>adopted Gollum</td>
-              <td>Oct 30</td>
-              <td>current</td>
-              <td>caught him with an elven rope</td>
-            </tr>
-          </table>
-        </div>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <li><a class="dropdown-item" href="#">Jobs</a></li>
+          <li><a class="dropdown-item" href="#">Pets</a></li>
+          <li><a class="dropdown-item" href="#">School</a></li>
+          <li><a class="dropdown-item" href="#">Tattos/Piercings</a></li>
+          <li><a class="dropdown-item" href="#">Vacation</a></li>
+          <li><a class="dropdown-item" href="#">Other</a></li>
+        </ul>
       </div>
     </div>
   </div>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/source.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
