did lots of work

--- a/userPage.html
+++ b/userPage.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/header.css"/>
   <link rel="stylesheet" href="css/userPage.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Macondo&display=swap" rel="stylesheet">
   <title>PieceTogether</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
@@ -13,18 +16,22 @@
   <nav class="nav" id="fullNav">
     <h1 id="navTitle">Piece Together</h1>
     <div id="headerButtons">
-      <a class="nav-link" href="index.html">Logout</a>
-      <a class="nav-link" href="#">Settings</a>
+      <a id="navBut" class="nav-link" href="index.html">Logout</a>
+      <a id="navBut" class="nav-link" href="#">Settings</a>
     </div>
   </nav>
-
-  <h3 id="greetingBox">Hello </h3>
-  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="offcanvas">
-    Sorting Options
-  </button>
-
-  <div class="accordion" id="accordion">
+  <div id="userControlBox" class="container">
+    <h3 id="greetingBox">Hello </h3>
+    <button id="formButton" class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="offcanvas">
+      Sorting Options
+    </button>
+  </div>
   
+  <div class="container">
+    <div class="accordion" id="accordion">
+    
+    </div>
+
   </div>
   
   
