--- a/userPage.html
+++ b/userPage.html
@@ -21,6 +21,7 @@
     </div>
   </nav>
   <div id="userControlBox" class="container">
+    <img id="background" src="images/pexels-pixabay-268819.jpg" alt="...">
     <h3 id="greetingBox">Hello </h3>
     <button id="formButton" class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="offcanvas">
       Sorting Options
