checking location name

--- a/loginPage.html
+++ b/loginPage.html
@@ -31,7 +31,7 @@
       </div>
       <div class="mb-3">
         <label for="InputPassword" class="form-label">Password</label>
-        <input type="password" style="border: 1px solid #589EA6" class="form-control" id="InputPassword">
+        <input type="password" style="border: 1px solid #589EA6" pattern="[A-Za-z0-9]{8,15}" class="form-control" id="InputPassword">
       </div>
       <button id="formButton" type="submit" class="btn btn-primary" >Login</button>
     </form>
