--- a/registerPage.html
+++ b/registerPage.html
@@ -42,11 +42,11 @@
       </div>
       <div class="mb-3">
         <label for="InputPassword" class="form-label">Password</label>
-        <input type="password" style="border: 1px solid #589EA6" class="form-control" id="InputPassword">
+        <input type="password" style="border: 1px solid #589EA6"  pattern="[A-Za-z0-9]{8,15}" class="form-control" id="InputPassword">
       </div>
       <div class="mb-3">
         <label for="ConfPassword" class="form-label">Confirm Password</label>
-        <input type="password" style="border: 1px solid #589EA6" class="form-control" id="ConfPassword">
+        <input type="password" style="border: 1px solid #589EA6"  pattern="[A-Za-z0-9]{8,15}" class="form-control" id="ConfPassword">
       </div>
       <button id="formButton" type="submit" class="btn btn-primary" >Register</button>
     </form>
