complete for sba submission

--- a/loginPage.html
+++ b/loginPage.html
@@ -21,7 +21,7 @@
     </div>
   </nav>
   <img id="background" src="images/pexels-pixabay-268819.jpg" alt="...">
-  <div class="container">
+  <div id="loginBox" class="container">
     <h3>Login</h3>
     <form onSubmit=loginUser(event)>
       <div class="mb-3">
